@@ -32,6 +32,7 @@ Template for new versions:
 
 ## Fixes
 - `fix/noexert-exhaustion`: fix typo in control panel registry entry which prevented the fix from being run when enabled
+- `gui/suspendmanager`: fix script startup errors
 
 ## Misc Improvements
 - `gui/unit-syndromes`: make syndromes searchable by their display names (e.g.  "necromancer")
